k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    name: banking
    app: banking-backend
